--- a/css/task4.css
+++ b/css/task4.css
@@ -1,10 +1,79 @@
 html{
     font-size:625%;
 }
-header{
+body{
     background-color:#eff0f4;
-    width:0.8rem;
-    padding:0;
-    margin:0;
-    position:fixed;
+}
+header{
+    position: fixed;
+    height: 1.2rem;
+    line-height: 1.2rem;
+    background: #5fc0cd;
+    left: 0;
+    right: 0;
+    top: 0;
+}
+header a {
+    color: white;
+    font-size:0.6rem;
+}
+.a1{
+    float:left;
+    margin-left:0.2rem;
+}
+.a2{
+    float:right;
+    margin-right:0.2rem;
+}
+header h2 {
+    text-align: center;
+    margin: 0;
+    font-size: 0.8rem;
+    color:white;
+}
+main{
+    position: absolute;
+    top: 1.4rem;
+    bottom:0;
+    left: 0;
+    right: 0;
+    background-color:#eff0f4;
+}
+.login{
+    width:100%;
+    background-color:white;
+    margin: .3rem 0 0 0;
+}
+.login-row input {
+    box-sizing: border-box;
+    width: 100%;
+    font-size: 0.6rem;
+    line-height: 0.5rem;
+    padding:0 0 0 0.8rem;
+    border:none;
+}
+.login-row input[type=text] {
+    background: url("../img/iphone.png") no-repeat;
+    background-position: 1.2%;
+}
+.login-row input[type=password] {
+    background: url("../img/locked 2.png") no-repeat;
+    background-position: 1.2%;
+}
+.bt{
+    margin-top:0.2rem;
+    width:100%;
+    line-height:0.4rem;
+    font-size: .16rem;
+    letter-spacing: 1em;
+    padding:0 0 0 0;
+    background-color:#5fc0cd;
+    color:white;
+}
+.ff{
+    float:right;
+    position:relative;
+    color:#5fc0cd;
+    padding:0.2rem 0.3rem 0 0;
+    font-size:0.4rem;
 }
