--- a/css/task7-2.css
+++ b/css/task7-2.css
@@ -40,11 +40,22 @@ header{
     font-size: .14rem;
     background-color: #b9e9f5;
     color: #464646;
-    padding-left: .25rem;
+    padding-left: .85rem;
     margin-top: .7rem;
 }
+@media screen and (max-width:376px){
+    .vote1{
+        position: relative;
+        line-height: .5rem;
+        font-size: .14rem;
+        background-color: #b9e9f5;
+        color: #464646;
+        padding-left: .25rem;
+        margin-top: .7rem;
+            }
+}
 .vt2{
-    background:url("../img/多边形1.png") no-repeat 5% top;
+    background:url("../img/xiaosanjiao.png") no-repeat 5% top;
     position:relative;
     top:17.5%;
     width:100%;
@@ -57,7 +68,7 @@ header{
 }
 .card{
     margin-left:0.1rem;
-    margin-top:5%;
+    margin-top:3%;
     position: relative;
    }
 .card .content{
@@ -67,16 +78,14 @@ header{
     list-style: none;
     padding: 0;
 }
-.card .content .item {
+.card .content .item{
     height: 25vw;
     width: 25vw;
-
     margin-right: 3vw;
     margin-bottom: 8vw;
     font-size: .17rem;
     text-align: center;
     border: 1vw solid white;
-
 }
 .card .content .item:hover .wrap {
     display: flex;
@@ -86,7 +95,7 @@ header{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80%;
+    height: 70%;
     margin: 0;
     color: #565656;
     background-color: #f5c97b;
@@ -96,7 +105,7 @@ header{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 20%;
+    height: 30%;
     margin: 0;
     background-color: #83b09a;
 }
@@ -116,7 +125,7 @@ footer{
     left:0;
     bottom:0;
     right:0;
-    height:0.6rem;
+    height:1rem;
     background-color:#29bde0;
     width:100%;
     text-align:center;
@@ -125,6 +134,19 @@ footer{
     margin-top:0.2rem;
     color:white;
     background-color:#fbb435;
-    width:2.5rem;
-
+    width:10rem;
+    height:0.45rem;
+    margin-bottom:.1rem;
+    font-size:0.2rem;
+}
+@media screen and (max-width:376px){
+    .f3 {
+        margin-top:0.2rem;
+        color:white;
+        background-color:#fbb435;
+        width:2.5rem;
+        height:0.45rem;
+        margin-bottom:.1rem;
+        font-size:0.2rem;
+    }
 }
