--- a/css/task7-2.css
+++ b/css/task7-2.css
@@ -38,7 +38,8 @@ header{
     position: relative;
     line-height: .5rem;
     font-size: .14rem;
-    background-color: #b9e9f5;
+    background: #b9e9f5 url("../img/buttonleft.png") no-repeat 97% center;
+    background-size:0.3rem 0.3rem;
     color: #464646;
     padding-left: .85rem;
     margin-top: .7rem;
@@ -48,7 +49,8 @@ header{
         position: relative;
         line-height: .5rem;
         font-size: .14rem;
-        background-color: #b9e9f5;
+        background: #b9e9f5 url("../img/buttonleft.png") no-repeat 97% center;
+        background-size:0.3rem 0.3rem;
         color: #464646;
         padding-left: .25rem;
         margin-top: .7rem;
@@ -145,6 +147,17 @@ footer{
         color:white;
         background-color:#fbb435;
         width:2.5rem;
+        height:0.45rem;
+        margin-bottom:.1rem;
+        font-size:0.2rem;
+    }
+}
+@media screen and (max-width:769px) and (min-width:376px){
+    .f3 {
+        margin-top:0.2rem;
+        color:white;
+        background-color:#fbb435;
+        width:6rem;
         height:0.45rem;
         margin-bottom:.1rem;
         font-size:0.2rem;
