--- a/css/task7-3.css
+++ b/css/task7-3.css
@@ -109,6 +109,7 @@ footer{
     list-style: none;
     width:100%;
     padding-right:0.5rem;
+    white-space: nowrap;
 }
 .container{
         width:100%;
@@ -128,13 +129,29 @@ footer{
     margin-left:-0.4rem;
     margin-right:-1rem;
 }
-.down ul li{
-    float: left;
-    width:100%;
-    border-bottom:1px solid #d3d3d3;
-        padding-left:0.2rem;
-        height:0.8rem;
-    padding-top:0.1rem;
+@media screen and (min-width:376px) {
+    .down ul li {
+        float: left;
+        width: 100%;
+        border-bottom: 1px solid #d3d3d3;
+        padding: 0.2rem 0.28rem 0.2rem 0.4rem;
+        height: 1.6rem;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+}
+@media screen and (max-width:376px){
+    .down ul li{
+        float: left;
+        width:100%;
+        border-bottom:1px solid #d3d3d3;
+        padding:0.1rem 0.1rem 0.3rem 0.4rem;
+        height:1.1rem;
+        display:flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
 }
 .first{
     font-size:0.15rem;
