--- a/css/task7-2.css
+++ b/css/task7-2.css
@@ -152,12 +152,23 @@ footer{
         font-size:0.2rem;
     }
 }
-@media screen and (max-width:769px) and (min-width:376px){
+@media screen and (max-width:415px) and (min-width:376px){
     .f3 {
         margin-top:0.2rem;
         color:white;
         background-color:#fbb435;
-        width:6rem;
+        width:4rem;
+        height:0.45rem;
+        margin-bottom:.1rem;
+        font-size:0.2rem;
+    }
+}
+@media screen and (max-width:769px) and (min-width:415px){
+    .f3 {
+        margin-top:0.2rem;
+        color:white;
+        background-color:#fbb435;
+        width:5rem;
         height:0.45rem;
         margin-bottom:.1rem;
         font-size:0.2rem;
